...
                .clipShape(RoundedRectangle(cornerRadius: Radius.md, style: .continuous))

                if viewModel.canShowMore {
                    TMButton(title: .trackingHistoryMore, style: .secondary) {
                        viewModel.showMore()
                    }
                    .accessibilityIdentifier("showMoreSessions")
                }
            }
            .frame(maxWidth: .infinity, alignment: .leading)
        }
    }

...
